--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -20,6 +20,11 @@
     "morgan": "^1.10.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
