--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
