--- a/frontend-client/.env
+++ b/frontend-client/.env
@@ -1,1 +1,5 @@
 VITE_API_BASE_URL=http://localhost:8000/api/v1
+
+VITE_EMAIL_SERVICE_ID=service_ofi725a
+VITE_EMAIL_TEMPLATE_ID=template_yfszmho
+VITE_EMAIL_PUBLIC_KEY=hSPwYG3T8v4a1qyJU
